added the MAPS as a submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "MSM_maps"]
 	path = MSM_maps
 	url = https://github.com/drflei/MSM_maps
+[submodule "MAPS"]
+	path = MAPS
+	url = https://github.com/drflei/MSM_maps.git
