--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-matplotlib==3.6.1
-numpy==1.17.4
-scipy==1.9.1
-setuptools==45.2.0
--e git+https://github.com/drflei/IRBEM.git@9e6b675cbdd6cdac69adcdbaaee856166a22f94b#egg=IRBEM&subdirectory=python
+matplotlib>=3.6.1
+numpy>=1.17.4
+pandas>=1.4.4
+python_dateutil>=2.8.2
+scipy>=1.9.1
+setuptools>=45.2.0
