--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-matplotlib>=3.6.1
-numpy>=1.17.4
-pandas>=1.4.4
-python_dateutil>=2.8.2
-scipy>=1.9.1
-setuptools>=45.2.0
+matplotlib
+numpy
+python_dateutil
+scipy
+setuptools
